Refactor TeamService: reemplazar excepciones genéricas por excepciones específicas (ProjectNotFoundException, UserNotFoundException, TeamNotFoundException, AlreadyInTeamException, NotInTeamException) para mejorar el manejo de errores; agregar clases de excepción correspondientes. Refactor UserTeamId: agregar constructor con argumentos para facilitar la creación de instancias.